# ponderada-ci-cd

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  models.py  routes.py  storage.py
charts/: .gitkeep
data/: .gitkeep  metrics.csv  metrics.json
docs/: RELATORIO.md
docs/prints/: .gitkeep
scripts/: collect_metrics.py  plot_metrics.py
tests/: conftest.py  test_api.py  test_bulk_generated.py  test_models.py  test_storage.py
