[project]
name = "ponderada-ci-cd"
version = "1.0.0"
description = "Experimento de métricas de pipeline CI/CD com GitHub Actions"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Conjunto enxuto porém útil: pyflakes (F), pycodestyle (E/W),
# imports (I), bugbear (B), comprehensions (C4), pyupgrade (UP).
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts triviais em testes parametrizados
